# llm-cli

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
imgs/: README.md  demo1.cast
src/llm_cli/: args.py  chat.py  json_schema.py  list_models.py  main.py  spinner.py  utils.py
